--- a/odp-api/package.json
+++ b/odp-api/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.7",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
